--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,17 @@
                     </execution>
                 </executions>
             </plugin>
-
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifestEntries>
+							<Premain-Class>org.github.jamm.MemoryMeter</Premain-Class>
+						</manifestEntries>
+					</archive>
+				</configuration>
+			</plugin>
         </plugins>
 
     </build>
@@ -74,6 +84,36 @@
             <artifactId>jsch</artifactId>
             <version>0.1.53</version>
         </dependency>
+        <dependency>
+  		<groupId>com.hazelcast</groupId>
+        <artifactId>hazelcast</artifactId>
+        <version>3.6.4</version>
+  	</dependency>
+  	 <dependency>
+  		<groupId>com.github.jbellis</groupId>
+        <artifactId>jamm</artifactId>
+        <version>0.2.6</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>ch.qos.logback</groupId>
+  		<artifactId>logback-classic</artifactId>
+  		<version>1.1.7</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>ch.qos.logback</groupId>
+  		<artifactId>logback-core</artifactId>
+  		<version>1.1.7</version>
+  	</dependency>
+  	<dependency>
+	    <groupId>com.fasterxml.jackson.core</groupId>
+	    <artifactId>jackson-core</artifactId>
+	    <version>2.8.0</version>
+	</dependency>
+	<dependency>
+	    <groupId>com.fasterxml.jackson.core</groupId>
+	    <artifactId>jackson-databind</artifactId>
+	    <version>2.8.0</version>
+	</dependency>
     </dependencies>
 
 </project>
