--- a/src/main/resources/cli.properties
+++ b/src/main/resources/cli.properties
@@ -1,4 +1,4 @@
-europe1.user=ubuntu
-europe1.ip=ec2-54-159-97-238.compute-1.amazonaws.com
+europe1.user=mgunes
+europe1.ip=127.0.0.1
 europe1.port=22
 europe1.version=3.4.2
